--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,15 +12,26 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <% if current_user %>
-          <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
-          <li><a href="#"><%=current_user.email%></a></li>
-        <% else %>
-          <li><a href="/users/sign_in"> Login </a></li>
-        <% end %>
+
+    <ul class="nav navbar-nav navbar-right">
+      <% if current_user %>
+        <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+        <li><a href="#"><%=current_user.email%></a></li>
+      <% else %>
+        <li><a href="/users/sign_in"> Login </a></li>
+      <% end %>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href='#' class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
