--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,301 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.row {
+	margin: 0px;
+}
+.m1170 {
+    max-width: 1170px;
+    margin: 0px auto;
+}
+.padding-0 {
+    padding: 0px;
+}
+.padd-bottom10 {
+    padding-bottom: 10px;
+}
+.padd-top10 {
+    padding-top: 10px;
+}
+.bold {
+    font-weight: bold;
+}
+.txt-upper {
+    text-transform: uppercase;
+}
+.height-45 {
+    height: 45px;
+}
+.height-60 {
+    height: 60px;
+}
+.width-full {
+    width: 100%;
+}
+.font-size16 {
+	font-size: 16px;
+}
+.font-size12 {
+    font-size: 12px;
+}
+.font-size24 {
+    font-size: 24px;
+}
+.height-0 {
+    height: 0px;
+}
+.padd-top30 {
+	padding-top: 30px;
+}
+.padd-top20 {
+    padding-top: 20px;
+}
+.padd-top100 {
+	padding-top: 120px;
+}
+.padd-bottom20 {
+    padding-bottom: 20px;
+}
+.padd-bottom30 {
+	padding-bottom: 30px;
+}
+.padd-left0 {
+	padding-left: 0px;
+}
+.padd-left10 {
+	padding-left: 10px;
+}
+.padd-right0 {
+	padding-right: 0px;
+}
+.margin-bottom30 {
+	margin-bottom: 30px;
+} 
+.margin-top30 {
+	margin-top: 30px;
+}
+.margin-rt20 {
+    margin-right: 20px;
+}
+.pos-relative {
+    position: relative;
+}
+ul {
+    list-style-type: none;
+    padding: 0px;
+}
+.display-flex {
+    display: inline-flex;
+}
+.banner {
+	background-image: url('../images/banner1.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.a-hover {
+    color: #fff;
+    /*opacity: .8;*/
+}
+.a-hover:hover {
+	opacity: .8;
+	color: #fff;
+	text-decoration: none;
+}
+.text-white {
+	color: #fff;
+}
+.height40 {
+	height: 40px;
+}
+.btn-submit {
+    background: #ff9400;
+    border: none;
+    /*width: 80%;*/
+    color: #fff;
+    border-radius: 4px;
+    height: 40px;
+}
+.i-inner1 {
+    position: relative;
+    position: absolute;
+    right: 25px;
+    top: 10px;
+    font-size: 16px;
+    opacity: .7;
+    cursor: pointer;
+}
+.i-inner {
+    position: absolute;
+    right: 25px;
+    top: 10px;
+    height: 22px;
+    width: 22px;
+    /* opacity: .7; */
+}
+.corner {
+	border-radius: 4px;
+}
+.brdr-none {
+	border: none;
+}
+.eg-span {
+    background-color: #b5b5b5;
+    padding: 5px 15px;
+    border-radius: 15px;
+}
+input:focus, textarea:focus, select:focus, *:focus {
+    outline: none;
+}
+.select2-container--default .select2-selection--single {
+    background-color: #fff;
+     border: none; 
+    height: 40px !important;
+    border-radius: 4px;
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    color: #444;
+    line-height: 40px;
+    opacity: .8;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+	top: 7px;
+}
+/*.select2-selection__arrow {
+	display: none;
+}*/
+.bg-gray {
+	background: #f7f7f9;
+}
+.img-next {
+    position: relative;
+    float: right;
+    /*top: 30px;*/
+}
+.img-prev {
+    position: relative;
+    float: right;
+    /*top: 30px;*/
+    right: 10px;
+}
+.card-li {
+    margin-bottom: 20px;
+    box-shadow: 0px 1px 3px 0px #e3e3e3;
+}
+.info {
+    background: #fff;
+}
+.block-carousel {
+    padding: 0px;
+    padding-left: 2px;
+}
+.i-star {
+    color: #ff9300;
+}
+.op7 {
+    opacity: .7;
+}
+.persent-off {
+    border: 1px solid gainsboro;
+    padding: 2px 10px;
+    opacity: .5;
+}
+.btn1 {
+    position: relative;
+    border-radius: 50%;
+    height: 36px;
+    width: 36px;
+    line-height: 36px;
+    margin: 0px !important;
+    background: #fff;
+    padding-left: 12px;
+    box-shadow: 0px 0px 1px 0px gainsboro;
+    top: 12em;
+    z-index: 9999;
+}
+.btn2 {
+    position: relative;
+    border-radius: 50%;
+    height: 36px;
+    width: 36px;
+    line-height: 36px;
+    margin: 0px !important;
+    background: #fff;
+    padding-left: 14px;
+    box-shadow: 0px 0px 2px 0px gainsboro;
+    top: 12em;
+    z-index: 9999;
+
+}
+.btn1:hover, .btn2:hover,.btn1:focus, .btn2:focus {
+    text-decoration: none;
+    box-shadow: 0px 0px 0px 1px gainsboro;
+}
+.img-responsive {
+    width: 100%;
+}
+.img-kitchen-shower {
+    height: 350px;
+    width: 100%;
+    /*margin-top: 2.5em;*/
+}
+.img-circle {
+    border-radius: 50%;
+    background: #f1f1f1;
+    margin: 0px 110px;
+    padding-bottom: 30px;
+    padding-top: 20px;
+    margin-bottom: 30px;
+}
+.img-book-service {
+    height: 90px;
+    width: 100px;
+}
+hr.style15 {
+    border-top: 1px dashed #bba9a9;
+    text-align: center;
+    margin: 0px;
+        position: relative;
+    top: 75px;
+    left: 70%;
+    width: 68%;
+}
+hr.style15:after {
+    content: '>';
+    display: inline-block;
+    position: relative;
+    top: -13px;
+    padding: 0 6px;
+    background: #00b8ff;
+    color: #ffffff;
+    font-size: 18px;
+    height: 24px;
+    border-radius: 50%;
+    width: 24px;
+}
+.banner-home-service {
+    background-image: url('../images/banner2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.ul-inline {
+    display: inline-flex;
+}
+.brdr-right {
+    border-right: 3px solid #fff;
+}
+.li-image {
+    padding-top: 15px;
+}
+.span-number {
+    font-size: 40px;
+}
+.span-happy {
+    font-size: 18px;
+}
+.padd-lr30 {
+    padding: 0px 30px;
+}
+.img-request {
+    height: 80px;
+    width: 60px;
+}
