Added Trending service with live data

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -109,282 +109,29 @@
                 <div class="carousel-inner">
                     <div class="item active">
                         <div class="row">
+                          <% @service.each do |service| %>
                             <div class="col-md-3">
-                                <div class="col-item">
-                                    <ul>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
+                              <div class="col-item">
+                                <ul>
+                                  <li class="card-li">
+                                    <div class="photo">
+                                      <!-- <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" /> -->
+                                      <%= image_tag service.image.url %>
+                                    </div>
+                                    <div class="info">
+                                      <div class="row">
+                                        <div class="price col-md-12">
+                                            <h4><%= service.name %></h4>
+                                        </div>
                                       </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>AC Services</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
+                                      <div class="clearfix">
                                       </div>
-                                    </li>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Dietician</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div>
+                                    </div>
+                                  </li>
+                                </ul>
+                              </div>
                             </div>
-                            <div class="col-md-3">
-                                <div class="col-item">
-                                  <ul>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Bathroom & Deep Clean</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Bathroom & Deep Clean</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="col-item">
-                                    <ul>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Electrician</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Electrician</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="col-item">
-                                    <ul>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Carpenter</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Carpenter</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <div class="col-item">
-                                    <ul>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>AC Services</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>CarpenterServices</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="col-item">
-                                  <ul>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Plumber</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Plumber</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="col-item">
-                                    <ul>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Packers & Movers</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Packers & Movers</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="col-item">
-                                    <ul>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Yoga</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                    <li class="card-li">
-                                      <div class="photo">
-                                          <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" />
-                                      </div>
-                                      <div class="info">
-                                          <div class="row">
-                                              <div class="price col-md-12">
-                                                  <h4>Yoga</h4>
-                                              </div>
-                                          </div>
-                                          <div class="clearfix">
-                                          </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div>
-                            </div>
+                          <% end %>
                         </div>
                     </div>
                 </div>
