--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -109,13 +109,12 @@
                 <div class="carousel-inner">
                     <div class="item active">
                         <div class="row">
-                          <% @service.each do |service| %>
+                          <% @service.first(8).each do |service, index| %>
                             <div class="col-md-3">
                               <div class="col-item">
                                 <ul>
                                   <li class="card-li">
                                     <div class="photo">
-                                      <!-- <img src="images/ac-services-&-repair.png" class="img-responsive" alt="a" /> -->
                                       <%= image_tag service.image.url %>
                                     </div>
                                     <div class="info">
@@ -134,6 +133,39 @@
                           <% end %>
                         </div>
                     </div>
+                    5.times do |i|
+                      puts i
+                    end
+                    <%if @item_count >=  1 %>
+                      <% @item_count.times do |i| %>
+                        <div class="item">
+                            <div class="row">
+                              <% @service.drop(8*i).first(8).each do |service, index| %>
+                                <div class="col-md-3">
+                                  <div class="col-item">
+                                    <ul>
+                                      <li class="card-li">
+                                        <div class="photo">
+                                          <%= image_tag service.image.url %>
+                                        </div>
+                                        <div class="info">
+                                          <div class="row">
+                                            <div class="price col-md-12">
+                                                <h4><%= service.name %></h4>
+                                            </div>
+                                          </div>
+                                          <div class="clearfix">
+                                          </div>
+                                        </div>
+                                      </li>
+                                    </ul>
+                                  </div>
+                                </div>
+                              <% end %>       
+                            </div>
+                        </div>
+                      <% end %>
+                    <% end %>
                 </div>
             </div>
       </div>
