--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js' %>
     <%= javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' %>
     <%= javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js' %>
+    <%#= javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js' %>
     <%#= javascript_include_tag '//code.jquery.com/ui/1.12.1/jquery-ui.js' %>
     <%#= javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
