Added login cookie

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
             </div>
           <% else %>
             <div class="col-md-2 padd-right0">
-              <a href="/users/sign_in" class="a-hover open-modal" data-toggle="modal" data-target="#myModal" >Login/SignUP</a>
+              <a href="<%=get_path %>" class="a-hover open-modal" data-toggle="modal" data-target="#myModal" >Login/SignUP</a>
             </div>
           <% end %>
         </div>
